# VirtueMachine

./: .env.local.example  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  flake.nix  package.json  tsconfig.json  tsconfig.net.json  vite.config.mjs  vite.config.ts
.github/workflows/: pristine-legacy-check.yml  sim-core-ci.yml
docs/: README.md  development-plan.md  progress.md
docs/architecture/legacy/: README.md  keyboard-parity.md  module-map.md  startup-menu-parity.md  symbol-catalog.md
docs/architecture/new/: README.md  audio-safe-rollout-checklist.md  decision-log.md  multiplayer-state-contract.md  sim-core-contract.md  system-overview.md
docs/plans/: nuvie-render-refactor-checklist.md
docs/policies/: legacy-submodule-update.md  pristine-legacy-policy.md  sandbox-escalation-policy.md
docs/research/: legacy-findings.md
docs/templates/: legacy-finding-template.md  symbol-entry-template.md
docs/wiki/: 01-legacy-runtime-anatomy.md  02-modern-runtime-anatomy.md  03-rendering-pipeline-deep-dive.md  04-object-baseline-provenance.md  05-determinism-and-replay.md  06-network-authority-and-persistence.md  07-parity-engineering-workflow.md  08-deviation-ledger.md  09-testing-and-tooling-index.md  10-glossary.md  11-parity-case-studies.md  12-canonical-completion-roadmap.md  13-reference-atlas.md  14-api-ui-realtime-sync.md  15-api-endpoint-reference.md  16-ultima-vi-online-comparative-analysis.md  17-ui-canonical-legacy-matrix.md  18-in-game-ui-canonicalization.md  24-ts-refactor-non-canonical-tracker.md  README.md  index.html  terms.json  wiki.css  wiki.js  wiki.ts
legacy/transcript reference/: Transcript_U6.txt
modern/: README.md
modern/assets/: manifest.optional.txt  manifest.required.txt
modern/client-web/: README.md  app.js  app.ts  index.html  legacy_object_order.js  legacy_object_order.ts  render_composition.js  render_composition.ts  styles.css  ui_probe_contract.js  ui_probe_contract.ts
modern/client-web/conversation/: dialog_runtime.js  dialog_runtime.ts  presentation_runtime.js  presentation_runtime.ts  rules_runtime.js  rules_runtime.ts  session_runtime.ts  (+3 more)
modern/common/: runtime_contract.cjs  runtime_contract.mjs  runtime_contract.ts  runtime_contract_core.cjs
modern/net/: README.md  server.js  server.ts  world_assoc_chain_bridge.js  world_assoc_chain_bridge.ts  world_interaction_bridge.js  world_interaction_bridge.ts  world_objects_query_bridge.js
modern/sim-core/: CMakeLists.txt  README.md
modern/sim-core/include/: sim_core.h  u6_assoc_chain.h  u6_entities.h  u6_interaction.h  u6_map.h  u6_objblk.h  u6_objlist.h  u6_objstatus.h  u6_world_interact_bridge.h
modern/sim-core/src/: sim_core.c  u6_assoc_chain.c  u6_entities.c  u6_interaction.c  u6_map.c  u6_objblk.c  u6_objlist.c  u6_objstatus.c  u6_world_interact_bridge.c
modern/sim-core/tests/: test_clock_rollover.c  test_command_envelope.c  test_entities.c  test_interaction.c  test_objlist_compat.c  test_replay.c  test_replay_checkpoints.c  test_snapshot_persistence.c  test_u6_assoc_chain.c  test_u6_map.c  test_u6_objblk.c  test_u6_objstatus.c  test_u6_world_interact_bridge.c  test_world_state_io.c
modern/sim-core/tools/: assoc_chain_batch_bridge_cli.c  assoc_chain_bridge_cli.c  world_interact_bridge_cli.c  world_objects_query_bridge_cli.c
modern/tools/: activate_baseline_profile.sh  check_lb_bedroom.sh  check_pristine_legacy.sh  ci_required_tests.sh  cmake_configure.sh  compare_checkpoints.sh  compare_objblk_sets.sh  dev_stack.sh  dev_web.sh  extract_legacy_ui_anchors.sh  extract_lzobjblk_savegame.js  extract_lzobjblk_savegame.ts  generate_replay_pack.sh  generate_ui_probe_fixture.ts  hard_reset_world_state.sh  import_baseline_profile.sh  inspect_shp.js  inspect_shp.ts  make_lb_bedroom_test_profile.js  make_lb_bedroom_test_profile.ts  patch_baseline_profile.js  patch_baseline_profile.ts  probe_lb_bedroom.js  probe_lb_bedroom.ts  reload_net_baseline.js  reload_net_baseline.ts  report_lb_bedroom_diff.js  report_lb_bedroom_diff.ts  reset_world_save.sh  run_lb_profile_matrix.sh  run_ui_parity_workflow.sh  secure_web_server.py  stop_dev_stack.sh  sync_assets.sh  test.sh  test_client_web_conversation.sh  test_client_web_render_composition.sh  test_client_web_ui_inventory_paperdoll.sh  test_client_web_ui_mechanics_capability.sh  test_client_web_ui_message_log.sh  (+12 more)
skills/in-game-ui-canonical/: SKILL.md
skills/nuvie-parity-docs/: SKILL.md
(+77 files in other folders)
